optimize permissions fetch
